--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
    <link href="%PUBLIC_URL%/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
    <link href="%PUBLIC_URL%/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
    <link href="%PUBLIC_URL%/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-4w+HvgtRzIOtAw+BkB3M9RJ2YibA9DvFvnrbzKo7mR+uqo9viDUJSKLdtyO/3DNuLDmEYTwuMn4uqdr51DoRjw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
  
    <!-- Template Main CSS File -->
    <link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet">
